2002-06-05  Derek Atkins   <derek@ihtfp.com>

	Integration of the new Query subsystem, to replace the old Query
	infrastructure.  This also replaces the old "Find Transaction"
	dialog with the new gnome-search dialog.  Registers, Reports, SXs,
	etc. all test out fine.  Integration with SQL has been "done"
	(i.e. it compiles cleanly) but not "tested."  Lots of the old code
	is still there, but #ifdef'ed out.  That code will go away
	shortly.

	There is only one known loss-of-functionality: the query->xml-v1
	converter was not re-implemented.  The current intention is, if
	this functionality is required, to use the query->scm converter
	and then convert the scm->string and insert that into an XML
	document.

	Fix a Transaction Void bug.
	
	Fix a few bugs in test code.

2002-06-04  David Hampton  <hampton@employees.org>

	* src/gnome-utils/gnc-mdi-utils.c (gnc_mdi_destroy): Work around a
	bug in the Gnome MDI code that is causing Gnucash to crash if the
	last window isn't the topmost window when the application is quit.

2002-06-05  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/hbci/*: Add directory and initial files for
	HBCI support module.

2002-05-31  David Hampton  <hampton@employees.org>

	* src/gnome/reconcile-list.c: Fix the direction of the sort
	arrows.

	* src/gnome-utils/dialog-options.c: Preferences dialogs will now
	switch over from a tabbed notebook to a list/notebook pair if
	there are more than four pages.  Put radio buttons in a horizontal
	box instead of a vertical one.

	* src/gnome-utils/gnc-html.c:
	* src/gnome-utils/gw-gnome-utils-spec.scm:
	* src/gnome-utils/print-session.[ch]:
	* src/scm/printing/print-check.scm: Eliminate warning messages
	while printing.
	
2002-05-27  Derek Atkins   <derek@ihtfp.com>

	* src/app-utils/option-util.c: Add a function to reset all the gui
	widgets for an option-db, ignoring sections that begin "__".

	* dialog-options.c: remove all the 'set to default' buttons and