@@ -1,3 +1,9 @@
+2002-06-06  Derek Atkins   <derek@ihtfp.com>
+
+	Create a top-level Business menu item in the main window.  You
+	don't need to run GnuCash with GNC_DEBUG=1 in order to use the
+	business functionality.
+
 2002-06-05  Derek Atkins   <derek@ihtfp.com>
 
 	Integration of the new Query subsystem, to replace the old Query
